Aggiunta struttura side bar

--- a/index.html
+++ b/index.html
@@ -23,10 +23,20 @@
         </div>
     </div>
     <!-- FINE BOTTOM BAR -->
-    <div class="container">
+    <div class="container relative">
         <!-- SIDE BAR -->
         <div class="side-bar">
+            <div class="row relative">
+                <div class="col">
 
+                </div>
+                <div class="col">
+                    
+                </div>
+                <div class="col">
+                    
+                </div>
+            </div>
         </div>
         <!-- FINE SIDE BAR -->
         <!-- TOP BAR -->
