Aggiunta struttura top bar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
         <!-- FINE SIDE BAR -->
         <!-- TOP BAR -->
         <div class="top-bar">
-
+            <div class="row">
+                <div class="col">
+                    
+                </div>
+            </div>
         </div>
         <!-- FINE TOP BAR -->
         <!-- MAIN -->
