Aggiunti contenuti bottom bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Spotify</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -15,13 +16,51 @@
     <div class="bottom-bar">
         <div class="row space-between">
             <div class="col">
-
+                <div class="left-content">
+                    <div class="brano">
+                        <img src="./img/sinister.jpeg" alt="Brano">
+                        <div class="content">
+                            <strong class="title">
+                                Sinister
+                            </strong>
+                            <div class="subtitle">
+                                Brano Nome
+                            </div>
+                        </div>
+                    </div>
+                    <div class="icone">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-folder"></i>
+                    </div>
+                </div>
             </div>
             <div class="col">
-
+                <div class="center-content">
+                    <div class="top-content">
+                        <i class="fa-solid fa-shuffle"></i>
+                        <i class="fa-solid fa-backward-step"></i>
+                        <i class="fa-solid fa-play"></i>
+                        <i class="fa-solid fa-forward-step"></i>
+                        <i class="fa-solid fa-rotate-right"></i>
+                    </div>
+                    <div class="bottom-content w-100 space-between">
+                        <strong class="timer">
+                            0:25
+                        </strong>
+                        <input type="range">
+                        <strong class="timer">
+                            4:35
+                        </strong>
+                    </div>
+                </div>
             </div>
             <div class="col">
-
+                <div class="right-content">
+                    <i class="fa-solid fa-list"></i>
+                    <i class="fa-solid fa-desktop"></i>
+                    <i class="fa-sharp fa-solid fa-volume-high"></i>
+                    <input type="range">
+                </div>
             </div>
         </div>
     </div>
