Aggiunto contenuto side bar

--- a/index.html
+++ b/index.html
@@ -70,13 +70,56 @@
         <div class="side-bar">
             <div class="row relative">
                 <div class="col">
-
+                    <div class="top-content">
+                        <div class="logo">
+                            <img src="./img/logo.svg" alt="Logo">
+                        </div>
+                        <div class="home">
+                            <img src="./img/home.svg" alt="Home">
+                            <span>Home</span>
+                        </div>
+                        <div class="search">
+                            <img src="./img/search.svg" alt="Search">
+                            <span>Cerca</span>
+                        </div>
+                        <div class="library">
+                            <img src="./img/libreria.svg" alt="Library">
+                            <span>La tua libreria</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="col">
-                    
+                    <div class="middle-content">
+                        <h3>PLAYLIST</h3>
+                        <div class="new-playlist">
+                            <i class="fa-sharp fa-solid fa-square-plus"></i>
+                            <span>Crea Playlist</span>
+                        </div>
+                        <div class="playlists">
+                            <ul>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
-                    
+                <div class="col w-100">
+                    <div class="bottom-content w-100">
+                        <div class="download">
+                            <img src="./img/download.svg" alt="Download">
+                            <span>Installa app</span>
+                        </div>
+                        <hr class="w-100">
+                        <div class="profile">
+                            <img src="./img/profile.svg" alt="Profile">
+                            <span>John Doe</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
