Aggiunti effetti hover a main/top-bar/side-bar

--- a/index.html
+++ b/index.html
@@ -169,7 +169,12 @@
                     <div class="row w-100">
                         <div class="col">
                             <div class="card">
-                                <img src="./img/metal_lifting.jpg" alt="Heavy Metal">
+                                <div class="card-img relative">
+                                    <img src="./img/metal_lifting.jpg" alt="Heavy Metal">
+                                    <div class="hover">
+                                        <i class="fa-solid fa-play"></i>
+                                    </div>
+                                </div>
                                 <div class="content">
                                     <h3>Heavy Metal</h3>
                                     <div class="subtitle">
@@ -180,7 +185,12 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="./img/stranger.jpeg" alt="Stranger Things">
+                                <div class="card-img relative">
+                                    <img src="./img/stranger.jpeg" alt="Stranger Things">
+                                    <div class="hover">
+                                        <i class="fa-solid fa-play"></i>
+                                    </div>
+                                </div>
                                 <div class="content">
                                     <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
                                     <div class="subtitle">
@@ -191,7 +201,12 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="./img/aquietplace.jpeg" alt="A Quiet Place">
+                                <div class="card-img relative">
+                                    <img src="./img/aquietplace.jpeg" alt="A Quiet Place">
+                                    <div class="hover">
+                                        <i class="fa-solid fa-play"></i>
+                                    </div>
+                                </div>
                                 <div class="content">
                                     <h3>A quiet place</h3>
                                     <div class="subtitle">
@@ -202,7 +217,12 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="./img/split.jpeg" alt="Split">
+                                <div class="card-img relative">
+                                    <img src="./img/split.jpeg" alt="Split">
+                                    <div class="hover">
+                                        <i class="fa-solid fa-play"></i>
+                                    </div>
+                                </div>
                                 <div class="content">
                                     <h3>Split</h3>
                                     <div class="subtitle">
@@ -213,7 +233,12 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="./img/cure.jpeg" alt="A cure for wellness">
+                                <div class="card-img relative">
+                                    <img src="./img/cure.jpeg" alt="A cure for wellness">
+                                    <div class="hover">
+                                        <i class="fa-solid fa-play"></i>
+                                    </div>
+                                </div>
                                 <div class="content">
                                     <h3>A cure for wellness</h3>
                                     <div class="subtitle">
@@ -224,7 +249,12 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="./img/sinister.jpeg" alt="Sinister">
+                                <div class="card-img relative">
+                                    <img src="./img/sinister.jpeg" alt="Sinister">
+                                    <div class="hover">
+                                        <i class="fa-solid fa-play"></i>
+                                    </div>
+                                </div>
                                 <div class="content">
                                     <h3>Sinister</h3>
                                     <div class="subtitle">
@@ -246,7 +276,12 @@
                     <div class="row w-100">
                         <div class="col">
                             <div class="card">
-                                <img src="./img/radar.jpeg" alt="Release Radar">
+                                <div class="card-img relative">
+                                    <img src="./img/radar.jpeg" alt="Release Radar">
+                                    <div class="hover">
+                                        <i class="fa-solid fa-play"></i>
+                                    </div>
+                                </div>
                                 <div class="content">
                                     <h3>Release Radar</h3>
                                 </div>
@@ -254,7 +289,12 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="./img/mixdaily.jpeg" alt="Daily Mix">
+                                <div class="card-img relative">
+                                    <img src="./img/mixdaily.jpeg" alt="Daily Mix">
+                                    <div class="hover">
+                                        <i class="fa-solid fa-play"></i>
+                                    </div>
+                                </div>
                                 <div class="content">
                                     <h3>Daily Mix 1</h3>
                                 </div>
@@ -273,7 +313,12 @@
                     <div class="row w-100">
                         <div class="col">
                             <div class="card">
-                                <img src="./img/youg.jpeg" alt="Lana del Rey">
+                                <div class="card-img relative">
+                                    <img src="./img/youg.jpeg" alt="Lana del Rey">
+                                    <div class="hover">
+                                        <i class="fa-solid fa-play"></i>
+                                    </div>
+                                </div>
                                 <div class="content">
                                     <h3>Lana del Rey</h3>
                                 </div>
@@ -281,7 +326,12 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img src="./img/einaudi.jpeg" alt="Ludovico Einaudi">
+                                <div class="card-img relative">
+                                    <img src="./img/einaudi.jpeg" alt="Ludovico Einaudi">
+                                    <div class="hover">
+                                        <i class="fa-solid fa-play"></i>
+                                    </div>
+                                </div>
                                 <div class="content">
                                     <h3>Ludovico Einaudi</h3>
                                 </div>
