--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                         <strong class="timer">
                             0:25
                         </strong>
-                        <input type="range">
+                        <div class="range" min="0" max="100">
+                            <input type="range" class="w-100">
+                        </div>
                         <strong class="timer">
                             4:35
                         </strong>
@@ -59,7 +61,9 @@
                     <i class="fa-solid fa-list"></i>
                     <i class="fa-solid fa-desktop"></i>
                     <i class="fa-sharp fa-solid fa-volume-high"></i>
-                    <input type="range">
+                    <div class="range">
+                        <input type="range">
+                    </div>
                 </div>
             </div>
         </div>
@@ -74,7 +78,7 @@
                         <div class="logo">
                             <img src="./img/logo.svg" alt="Logo">
                         </div>
-                        <div class="home">
+                        <div class="home relative active">
                             <img src="./img/home.svg" alt="Home">
                             <span>Home</span>
                         </div>
@@ -141,7 +145,7 @@
             <div class="nav w-100">
                 <div class="row">
                     <div class="col">
-                        <a href="#"><h3>IN EVIDENZA</h3></a>
+                        <a href="#"><h3 class="active relative">IN EVIDENZA</h3></a>
                     </div>
                     <div class="col">
                         <a href="#"><h3>PODCAST</h3></a>
