--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <strong class="timer">
                             0:25
                         </strong>
-                        <div class="range" min="0" max="100">
+                        <div class="range">
                             <input type="range" class="w-100">
                         </div>
                         <strong class="timer">
@@ -72,6 +72,30 @@
     <div class="container relative w-100">
         <!-- SIDE BAR -->
         <div class="side-bar">
+            <div class="mobile">
+                <div class="top-mobile w-100">
+                    <div class="logo">
+                        <img src="./img/logo-small.svg" alt="Logo">
+                    </div>
+                    <div class="home">
+                        <img src="./img/home.svg" alt="Home">
+                    </div>
+                    <div class="search">
+                        <img src="./img/search.svg" alt="Search">
+                    </div>
+                    <div class="library">
+                        <img src="./img/libreria.svg" alt="Library">
+                    </div>
+                </div>
+                <div class="bottom-mobile w-100">
+                    <div class="download">
+                        <img src="./img/download.svg" alt="Download">
+                    </div>
+                    <div class="profile">
+                        <img src="./img/profile.svg" alt="Profile">
+                    </div>
+                </div>
+            </div>
             <div class="row relative">
                 <div class="col">
                     <div class="top-content">
