--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.ico">
     <title>Spotify</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -39,7 +40,7 @@
                     <div class="top-content">
                         <i class="fa-solid fa-shuffle"></i>
                         <i class="fa-solid fa-backward-step"></i>
-                        <i class="fa-solid fa-play"></i>
+                        <i class="fa-regular fa-circle-play"></i>
                         <i class="fa-solid fa-forward-step"></i>
                         <i class="fa-solid fa-rotate-right"></i>
                     </div>
@@ -198,7 +199,7 @@
                                 <div class="card-img relative">
                                     <img src="./img/metal_lifting.jpg" alt="Heavy Metal">
                                     <div class="hover">
-                                        <i class="fa-solid fa-play"></i>
+                                        <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
                                 <div class="content">
@@ -214,7 +215,7 @@
                                 <div class="card-img relative">
                                     <img src="./img/stranger.jpeg" alt="Stranger Things">
                                     <div class="hover">
-                                        <i class="fa-solid fa-play"></i>
+                                        <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
                                 <div class="content">
@@ -230,7 +231,7 @@
                                 <div class="card-img relative">
                                     <img src="./img/aquietplace.jpeg" alt="A Quiet Place">
                                     <div class="hover">
-                                        <i class="fa-solid fa-play"></i>
+                                        <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
                                 <div class="content">
@@ -246,7 +247,7 @@
                                 <div class="card-img relative">
                                     <img src="./img/split.jpeg" alt="Split">
                                     <div class="hover">
-                                        <i class="fa-solid fa-play"></i>
+                                        <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
                                 <div class="content">
@@ -262,7 +263,7 @@
                                 <div class="card-img relative">
                                     <img src="./img/cure.jpeg" alt="A cure for wellness">
                                     <div class="hover">
-                                        <i class="fa-solid fa-play"></i>
+                                        <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
                                 <div class="content">
@@ -278,7 +279,7 @@
                                 <div class="card-img relative">
                                     <img src="./img/sinister.jpeg" alt="Sinister">
                                     <div class="hover">
-                                        <i class="fa-solid fa-play"></i>
+                                        <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
                                 <div class="content">
@@ -305,7 +306,7 @@
                                 <div class="card-img relative">
                                     <img src="./img/radar.jpeg" alt="Release Radar">
                                     <div class="hover">
-                                        <i class="fa-solid fa-play"></i>
+                                        <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
                                 <div class="content">
@@ -318,7 +319,7 @@
                                 <div class="card-img relative">
                                     <img src="./img/mixdaily.jpeg" alt="Daily Mix">
                                     <div class="hover">
-                                        <i class="fa-solid fa-play"></i>
+                                        <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
                                 <div class="content">
@@ -342,7 +343,7 @@
                                 <div class="card-img relative">
                                     <img src="./img/youg.jpeg" alt="Lana del Rey">
                                     <div class="hover">
-                                        <i class="fa-solid fa-play"></i>
+                                        <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
                                 <div class="content">
@@ -355,7 +356,7 @@
                                 <div class="card-img relative">
                                     <img src="./img/einaudi.jpeg" alt="Ludovico Einaudi">
                                     <div class="hover">
-                                        <i class="fa-solid fa-play"></i>
+                                        <i class="fa-regular fa-circle-play"></i>
                                     </div>
                                 </div>
                                 <div class="content">
